<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendanceConfirmationActivity"
    android:orientation="vertical">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_secondary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendance_confirmation"
            android:textSize="25sp" />
    </android.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newproject"
            android:textSize="25sp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/name1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/okuyama"
            android:textSize="25sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:onClick="toHistory"/>

        <TextView
            android:id="@+id/status1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/leave"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/name2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/kobayashi"
            android:textSize="25sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:onClick="toHistory"/>

        <TextView
            android:id="@+id/status2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/leave"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/name3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/yogi"
            android:textSize="25sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:onClick="toHistory"/>

        <TextView
            android:id="@+id/status3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/leave"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/name4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tamura"
            android:textSize="25sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:onClick="toHistory"/>

        <TextView
            android:id="@+id/status4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/leave"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/name5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/minowa"
            android:textSize="25sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:onClick="toHistory"/>

        <TextView
            android:id="@+id/status5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/leave"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/name6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/rokuhara"
            android:textSize="25sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:onClick="toHistory"/>

        <TextView
            android:id="@+id/status6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/leave"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>