<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finish_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <android.widget.Toolbar
        android:id="@+id/finish_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_secondary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application"
            android:textSize="25sp" />
    </android.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nochoice"
        android:textSize="21sp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:padding="16dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textSize="25sp"
        android:text="@string/finish_button"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"/>

</LinearLayout>