<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistoryActivity">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_secondary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="25sp" />
    </android.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/historyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_name"
            android:textSize="25sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_pro"
            android:textSize="25sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/history1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/history2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="25sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/history3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="25sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/history4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="25sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/history5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="25sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/history6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="25sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/history7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="25sp"
            android:layout_marginTop="16dp"/>



    </LinearLayout>

</LinearLayout>